--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,26 @@
 @import url("fonts/font-awesome.css");
 
-
- :root {
+* {
+  box-sizing: border-box;
+}
+body {
+  margin: 0%;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark; 
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  color-scheme: light dark; 
+  background-color: #3e3e3e;
+ 
+  
 }
+a {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
+}
+
+html, 
+body,
+#root {
+  height: 100%;
+} 
